<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TextInvo</string>
    <string name="action_settings">Settings</string>
    <string name="contacts_tv">Who would you like to send this to?</string>
    <string name="date_tv">When is your event?</string>
	<string name="message_tv">What is your event about?</string>
	<string name="send">Send</string>
	<string name="rsvp">When should your invites RSVP by?</string>

    
</resources>
