<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/contacts_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_tv" />
    <EditText
        android:id="@+id/contact_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />
    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_tv"/>
    <Button
        android:id="@+id/date_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView 
        android:id="@+id/message_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_tv"/>
    <EditText 
        android:id="@+id/message_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:lines="5" />
    <TextView
        android:id="@+id/rsvp_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rsvp"/>
    <Button
        android:id="@+id/rsvp_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send" />

</LinearLayout>
